<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/common_spacing"
    android:background="@color/black">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/sf_pro_display"
        android:text="@string/main_screen_header"
        android:textAlignment="center"
        android:textColor="@color/grey_6"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/text_field_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:layout_marginTop="32dp"
        android:background="@drawable/background_grey_3_rounded"
        app:layout_constraintTop_toBottomOf="@id/header_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_spacing"
            android:background="@drawable/background_grey_4_rounded"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/half_margin_common"
                android:layout_marginEnd="@dimen/common_spacing"
                android:src="@drawable/ic_search"
                android:textColor="@color/white"
                android:contentDescription="@string/search_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/sf_pro_display"
                    android:hint="@string/from_hint"
                    android:inputType="text"
                    android:paddingVertical="@dimen/common_spacing"
                    android:paddingEnd="@dimen/common_spacing"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginEnd="@dimen/common_spacing"
                    android:background="@color/grey_5" />

                <TextView
                    android:id="@+id/to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:clickable="true"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/to_hint"
                    android:paddingVertical="@dimen/common_spacing"
                    android:paddingEnd="@dimen/common_spacing"
                    android:textColor="@color/grey_6"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
    <TextView
        android:id="@+id/offers_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:fontFamily="@font/sf_pro_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_field_container"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="32dp"
        android:text="@string/offers_header"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/offers_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/common_spacing"
        tools:listitem="@layout/offers_item_card"
        />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/grey_1"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="@color/black"
        android:elevation="@dimen/common_spacing"
        app:itemActiveIndicatorStyle="@null"
        app:itemIconTint="@color/nav_item_color"
        app:itemPaddingBottom="4dp"
        app:itemTextAppearanceActive="@style/BottomNavActiveText"
        app:itemTextAppearanceInactive="@style/BottomNavInactiveText"
        app:itemTextColor="@color/nav_item_color"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
