<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:layout_height="match_parent"
    android:background="@drawable/background_grey_2_rounded">

    <ImageButton
        android:id="@+id/top_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close_dialog"
        android:src="@drawable/ic_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/text_field_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:background="@drawable/background_grey_3_rounded"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/plane_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/half_margin_common"
                android:contentDescription="@string/search_icon"
                android:src="@drawable/ic_plane"
                android:textColor="@color/white"
                app:tint="@color/white" />

            <EditText
                android:id="@+id/from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:fontFamily="@font/sf_pro_display"
                android:hint="@string/from_hint"
                android:inputType="text"
                android:paddingVertical="@dimen/common_spacing"
                android:paddingEnd="@dimen/common_spacing"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/common_spacing"
            android:background="@color/grey_4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginEnd="@dimen/half_margin_common"
                android:layout_marginBottom="@dimen/common_spacing"
                android:layout_weight="1"
                android:contentDescription="@string/search_icon"
                android:src="@drawable/ic_search"
                android:textColor="@color/white"
                app:tint="@color/grey_6" />

            <EditText
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:fontFamily="@font/sf_pro_display"
                android:hint="@string/to_hint"
                android:inputType="text"
                android:paddingVertical="@dimen/common_spacing"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/clear_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"

                android:contentDescription="@string/search_icon"
                android:src="@drawable/ic_clear"
                android:textColor="@color/grey_6"
                app:tint="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/quick_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/text_field_container">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/half_margin_common"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/complexRoute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/half_margin_common"
                android:background="@android:color/transparent"
                android:contentDescription="@string/complex_route"
                android:src="@drawable/ic_complex_route" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_pro_display"
                android:gravity="center"
                android:text="@string/complex_route"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/half_margin_common"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/anywhere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/half_margin_common"
                android:background="@android:color/transparent"
                android:contentDescription="@string/anywhere"
                android:src="@drawable/ic_anywhere" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_pro_display"
                android:gravity="center"
                android:text="@string/anywhere"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/half_margin_common"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/holidays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/half_margin_common"
                android:background="@android:color/transparent"
                android:contentDescription="@string/holidays"
                android:src="@drawable/ic_holidays" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_pro_display"
                android:gravity="center"
                android:text="@string/holidays"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/half_margin_common"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/hot_tickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/half_margin_common"
                android:background="@android:color/transparent"
                android:contentDescription="@string/hot_tickets"
                android:src="@drawable/ic_hot_tickets" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_pro_display"
                android:gravity="center"
                android:text="@string/hot_tickets"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/route_offers_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:layout_marginTop="32dp"
        android:background="@drawable/background_grey_3_rounded"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/quick_buttons">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/route_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/common_spacing"
            android:paddingVertical="@dimen/half_margin_common"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/image_1_Container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/half_margin_common"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/image_1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/offer_image_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/istanbul_photo" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/cityName_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_margin_common"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/istanbul"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/image_1_Container"
                app:layout_constraintTop_toTopOf="@id/image_1_Container" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_margin_common"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/popular_route"
                android:textColor="@color/grey_5"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/image_1_Container"
                app:layout_constraintStart_toEndOf="@id/image_1_Container" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/half_margin_common"
                android:background="@color/grey_4"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/route_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/common_spacing"
            android:paddingVertical="@dimen/half_margin_common"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/image_2_Container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/half_margin_common"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/image_2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/offer_image_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sochi_photo" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/cityName_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_margin_common"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/sochi"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/image_2_Container"
                app:layout_constraintTop_toTopOf="@id/image_2_Container" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_margin_common"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/popular_route"
                android:textColor="@color/grey_5"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/image_2_Container"
                app:layout_constraintStart_toEndOf="@id/image_2_Container" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/half_margin_common"
                android:background="@color/grey_4"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/route_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/common_spacing"
            android:paddingVertical="@dimen/half_margin_common"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/image_3_Container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/half_margin_common"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/image_3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/offer_image_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/phoket_photo" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_margin_common"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/phuket"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/image_3_Container"
                app:layout_constraintTop_toTopOf="@id/image_3_Container" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_margin_common"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/popular_route"
                android:textColor="@color/grey_5"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/image_3_Container"
                app:layout_constraintStart_toEndOf="@id/image_3_Container" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/half_margin_common"
                android:background="@color/grey_4"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>