<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:layout_marginTop="36dp"
        android:background="@color/grey_2"
        android:padding="@dimen/half_margin_common"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/blue" />

        <TextView
            android:id="@+id/route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin_common"
            android:fontFamily="@font/sf_pro_display"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Москва-Сочи" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin_common"
            android:fontFamily="@font/sf_pro_display_italic"
            android:textColor="@color/grey_6"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toBottomOf="@id/route"
            tools:text="23 февраля, 1 пассажир" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/half_margin_common"
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:listitem="@layout/tickets_item_card" />


    <LinearLayout
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:background="@drawable/background_blue_rounded"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/filter"
            android:src="@drawable/ic_settings" />

        <TextView
            android:id="@+id/filter_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sf_pro_display_italic"
            android:text="@string/filter"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/graph_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/price_graph"
            android:src="@drawable/ic_graph" />

        <TextView
            android:id="@+id/graph_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/half_margin_common"
            android:fontFamily="@font/sf_pro_display_italic"
            android:text="@string/price_graph"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/grey_1"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="@color/black"
        android:elevation="@dimen/common_spacing"
        app:itemActiveIndicatorStyle="@null"
        app:itemIconTint="@color/nav_item_color"
        app:itemPaddingBottom="4dp"
        app:itemTextAppearanceActive="@style/BottomNavActiveText"
        app:itemTextAppearanceInactive="@style/BottomNavInactiveText"
        app:itemTextColor="@color/nav_item_color"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>